<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlatMonougolniks.Mnogougolnik">

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="99dp"
        android:layout_height="98dp"
        android:background="#00FFFFFF"
        android:onClick="Kvadrat"
        android:contentDescription="@string/kv"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654"
        app:srcCompat="@drawable/kv" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/romb"
        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/kv"
        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="113dp"
        android:layout_height="112dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/romb"
        android:onClick="Romb"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413"
        app:srcCompat="@drawable/romb" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="148dp"
        android:layout_height="99dp"
        android:background="#00FFFFFF"
        android:onClick="Trup"
        android:contentDescription="@string/trup"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@drawable/trup" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="144dp"
        android:layout_height="105dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/pryam"
        android:onClick="Pryamoug"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167"
        app:srcCompat="@drawable/pryam" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/pryam"
        app:layout_constraintEnd_toEndOf="@+id/imageButton9"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/imageButton9"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/trup"
        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <ImageButton
        android:id="@+id/strelaImageButton2"
        android:layout_width="82dp"
        android:layout_height="62dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/Back"
        android:onClick="Strela1"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ctrela"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="-2dp" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:contentDescription="@string/Mnogoug2"
        android:layout_width="120dp"
        android:layout_height="122dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="248dp"
        android:background="#00FFFFFF"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mnogo6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Mnogoug2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton15"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="@+id/imageButton15"
        app:layout_constraintTop_toBottomOf="@+id/imageButton15"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton16"
        android:layout_width="124dp"
        android:layout_height="117dp"
        android:layout_marginStart="52dp"
        android:contentDescription="@string/Treug"
        android:onClick="Tringle"
        android:layout_marginTop="416dp"
        android:background="#00FFFFFF"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/treug" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="84dp"
        android:layout_height="27dp"
        android:text="@string/Treug"
        app:layout_constraintEnd_toEndOf="@+id/imageButton16"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="@+id/imageButton16"
        app:layout_constraintTop_toBottomOf="@+id/imageButton16"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>